use HashMap to represent the children of a node